# nutpatch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NitroNutpatch.podspec  README.md  eslint.config.js  nitro.json  package-lock.json  package.json
.github/workflows/: auto-tag-on-version-bump.yml  patch_coverage.yml  publish.yml  test.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/nutpatch/: NitroNutpatchPackage.kt
cpp/core/: HybridCashuCrypto.cpp  HybridCashuCrypto.hpp  HybridOutputCreator.cpp  HybridOutputCreator.hpp  crypto.c  crypto.h
cpp/tests/: crypto_test.cpp
ios/: Bridge.h
scripts/: check-patch-compat.ts  tsconfig.json
src/: NativeOutputCreator.ts  index.ts  p2pk-utils.ts
src/crypto/: NUT12.ts  core.ts  utils.ts
src/specs/: Crypto.nitro.ts  OutputCreator.nitro.ts
test/: p2pk-utils.test.ts
